Modified small changes

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							</div>
 							<div class="row mt-3">
 								<div class="col-sm-4"><b>ADDRESS:</b></div>
-								<div class="col-sm-8">E-1201, Ace Platinum, Zeta-1, Greater Noida</div>
+								<div class="col-sm-8">Zeta-1, Greater Noida</div>
 							</div>
 							<div class="row mt-3">
 								<div class="col-sm-4"><b>LANGUAGES:</b></div>
@@ -177,13 +177,13 @@
 									I'm expertise in various set of skills among different domains. Also had done hands-on in most of the skills I possess. Some of my top skills are listed below.
 								</p>
 								<li>
-									<h5>Java<span style="float: right;">70%</span></h5><span class="bar"><span class="java"></span></span>
+									<h5>Java<span style="float: right;">90%</span></h5><span class="bar"><span class="java"></span></span>
 								</li>
 								<li>
 									<h5>HTML+CSS+JS<span style="float: right;">80%</span></h5><span class="bar"><span class="html"></span></span>
 								</li>
 								<li>
-									<h5>Python<span style="float: right;">90%</span></h5><span class="bar"><span class="python"></span></span>
+									<h5>Python<span style="float: right;">70%</span></h5><span class="bar"><span class="python"></span></span>
 								</li>
 								<li>
 									<h5>SQL<span style="float: right;">85%</span></h5><span class="bar"><span class="sql"></span></span>
